--- a/pom.xml
+++ b/pom.xml
@@ -110,10 +110,15 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -126,8 +131,10 @@
             <plugin>
                 <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
-            <version>3.0.3</version>
-        </plugin>
+                <version>2.0.6</version>
+            </plugin>
+
+
         </plugins>
     </build>
 
